# rust-surrealdb-todo-web-app

./: .env  Cargo.toml  README.md  docker-compose.yml  prometheus.yml
src/: app_state.rs  create.rs  find_by_id.rs  main.rs  paginate.rs  todo.rs
