[package]
name = "todoapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4", "v5", "serde"] }
thiserror = "2.0.12"
surrealdb = "2.3.7"
anyhow = "1.0.98"
prometheus = "0.14.0"
lazy_static = "1.4"
